name:                AtSchool
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vkraven/AtSchool#readme
license:             BSD3
license-file:        LICENSE
author:              vkraven
maintainer:          felixk@vkraven.com
copyright:           2019 vkraven
category:            Logic
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AtSchool
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -static
  build-depends:       base >= 4.7 && < 5
